src/test/ui/type-alias-impl-trait/assoc-type-lifetime-unconstrained.full_tait.stderr
warning: the feature `type_alias_impl_trait` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/assoc-type-lifetime-unconstrained.rs:6:32
   |
LL | #![cfg_attr(full_tait, feature(type_alias_impl_trait))]
   |                                ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #63063 <https://github.com/rust-lang/rust/issues/63063> for more information

error[E0207]: the lifetime parameter `'a` is not constrained by the impl trait, self type, or predicates
  --> $DIR/assoc-type-lifetime-unconstrained.rs:20:6
   |
LL | impl<'a, I> UnwrapItemsExt for I {
   |      ^^ unconstrained lifetime parameter

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0207`.
